--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon -L express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,7 +12,7 @@
     "url": "git+https://github.com/JimHwkins/tinyapp.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alex Ferru",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JimHwkins/tinyapp/issues"
@@ -20,5 +21,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
